--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
     <!-- 在此處嵌入 Google AdSense 廣告代碼 -->
     <div id="ad-container">
         <!-- Google AdSense 廣告代碼 -->
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+       <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9273385058356560"
+             crossorigin="anonymous"></script>
+        <!-- GitHub -->
         <ins class="adsbygoogle"
-             style="display:block"
-             data-ad-client="ca-pub-XXXXXXXXXXXXXXXX"
-             data-ad-slot="XXXXXXXXXX"
-             data-ad-format="auto"></ins>
+             style="display:inline-block;width:728px;height:90px"
+             data-ad-client="ca-pub-9273385058356560"
+             data-ad-slot="8696456086"></ins>
         <script>
              (adsbygoogle = window.adsbygoogle || []).push({});
         </script>
