--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>My GitHub Pages Site</title>
 </head>
 <body>
-    <h1>Welcome to My Site</h1>
-    <p>This is a sample site hosted on GitHub Pages.</p>
+    <h1>企鵝測試用</h1>
 
     <!-- 在此處嵌入 Google AdSense 廣告代碼 -->
     <div id="ad-container">
