--- a/index.html
+++ b/index.html
@@ -22,5 +22,10 @@
              (adsbygoogle = window.adsbygoogle || []).push({});
         </script>
     </div>
+
+     <!-- 添加隱私政策鏈接 -->
+ <footer>
+     <p><a href="privacy-policy.html">Privacy Policy</a></p>
+ </footer>
 </body>
 </html>
