--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Pages Site</title>
+    <meta name="google-adsense-account" content="ca-pub-9273385058356560">
+    <title>My GitHub Pages V2</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9273385058356560"
      crossorigin="anonymous"></script>
 </head>
